--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-/*@media (max-width: 990px) {
-   
-   Стили для устройств, у которых ширина viewport меньше или равно 990 пикселей,
-   но больше 770 пикселей.
-   Эти стили подойдут для некоторых мобильных устройств и планшетов
-   
- } */
-
-
 * {
    margin: 0;
    padding: 0;
@@ -92,7 +83,7 @@ header {
    cursor: pointer;
    border-radius: 4px;
    padding: 15px 30px 15px 30px;
-
+   color: #5cbe3a;
 }
 
 .white-button:hover {
