--- a/style/style.css
+++ b/style/style.css
@@ -1156,6 +1156,7 @@ ul {
     }
    img {
        margin-bottom: 15px;
+       width: 90%;
    }
 
 
@@ -1997,6 +1998,7 @@ ul {
       flex-direction: column;
       justify-content: center;
       text-align: center;
+      align-items: center;
    
 }
 
